EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==02/11/2011==
Trevius: Implemented item faction modifier stats (i.e. factionmod1, factionamt1).
Trevius: Added Power Source slot to item stat (charm) scaling.
Derision: SoD+: Fixed bug when looting items from last two inventory slots (commonly seen when using Loot All).
gaeorn: only send hp/mana/endurance updates to group members when in raid instead of entire raid

==02/10/2011==
JJ: (c0ncrete) Fixed shared bank database query to match schema.

==02/08/2011==
Trevius: Replaced most uses of strncpy with strn0cpy for consistency and stability.
Trevius: Increased zone name loading to 32 characters for doors.

Required SQL:
utils/sql/svn/1847_required_doors_dest_zone_size_32.sql

==02/07/2011==
Derision: SoD/UF: /makeleader and changing Group Leader via Roles works.
Derision: If the leader of a group of exactly 3 members quits, leadership should now be transferred to another member.

==01/30/2011==
Caryatis: Stability fixes for Mystats window.

==01/26/2011==
Derision: Support for door opentype 57 (instant intra-zone portals which don't require the client to click, such as in the bazaar).

Note: For opentype 57, the client automatically sends the click when the player moves onto the portal.

Optional SQL, to set the bazaar portal discs to type 57 (they are type 58 in the PEQ database, but collects show they should be type 57):

update doors set opentype = 57 where zone = 'bazaar' and name = 'PORTAL_DISC';

==01/24/2011==
Trevius: Exported GetFreeSpellBookSlot(start_slot=0) and GetSpellBookSlotBySpellID(spell_id) to Perl Client.
Trevius: Fix for potential crash with EVENT_ITEM_CLICK.
Trevius: (Secrets) Identified OP_SpellEffect for Titanium.
Congdar: bad_captain: more Bot Updates / Fixes V 2.0

==01/22/2011==
Congdar: fix stack buffer overflow

==01/20/2011==
Congdar: bad_captain: Bot Updates / Fixes V 2.0

==01/18/2011==